fix: changed .toList to .collect(Collectors.toList()) to support previous version